changed deploy script from min to game.js

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <script src="./node_modules/stats.js/build/stats.min.js"></script>
 
   <!-- Single JS file-->
-  <!-- <script src="./Scripts/build/game.js"></script>-->
-  <script src="./Scripts/build/game.min.js"></script>
+  <script src="./Scripts/build/game.js"></script>
+  <!-- <script src="./Scripts/build/game.min.js"></script> -->
   <!-- Game Scripts -->
 
   <!-- Configuration Files -->
